--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.17.2",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "airbnb": "0.0.2",
+    "airbnb": "^0.0.2",
     "eslint": "^8.9.0",
+    "eslint-config-prettier": "8.4.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.1"
   }
 }
