--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.17.2",
     "mongoose": "^6.2.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "airbnb": "^0.0.2",
