added token key and expiration period

--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT=3000
 DATABASE=<online_db_link>
 DATABASE_LOCAL = <local_db_link>
 DATABASE_PASSWORD=***************
+
+JWT_SECRET=***************************************
+JWT_EXPIRES_IN=90d
