--- a/config.env
+++ b/config.env
@@ -1,8 +1,14 @@
 NODE_ENV = development
 PORT=3000
-DATABASE=<online_db_link>
-DATABASE_LOCAL = <local_db_link>
-DATABASE_PASSWORD=***************
+DATABASE=mongodb+srv:****************************************
+DATABASE_LOCAL = ***********************************
+DATABASE_PASSWORD=**************
 
-JWT_SECRET=***************************************
+JWT_SECRET=*********************************************
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+
+EMAIL_USERNAME = **************
+EMAIL_PASSWORD = *************
+EMAIL_HOST = ************
+EMAIL_PORT = ********
