--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   "author": "Yosef Samuel and Abebayhu S.",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.17.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.3.0",
+    "helmet": "^5.0.2",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "slugify": "^1.6.5",
-    "validator": "^13.7.0"
+    "util": "^0.12.4",
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "airbnb": "^0.0.2",
@@ -29,4 +40,3 @@
     "prettier": "2.5.1"
   }
 }
-
