--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -24,7 +25,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
+    "pug": "^3.0.2",
     "slugify": "^1.6.5",
     "util": "^0.12.4",
     "validator": "^13.7.0",
