--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb": "^19.0.4",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.3.0",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "mapbox-gl": "^2.7.0",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
