--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "portfolio project using node, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
@@ -27,6 +28,7 @@
     "gm": "^1.23.1",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
+    "html-to-text": "^8.1.0",
     "imagemagick": "^0.1.3",
     "jsonwebtoken": "^8.5.1",
     "mapbox": "^1.0.0-beta10",
@@ -52,5 +54,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "ndb": "^1.1.5",
     "prettier": "2.5.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
