--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2",
     "slugify": "^1.6.5",
+    "stripe": "^8.207.0",
     "util": "^0.12.4",
     "validator": "^13.7.0",
     "vips": "^1.0.0",
